examples/test/testpolicy11721.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11721
  namespace: namespace342
spec:
  podSelector:
    matchLabels:
      key5: value35
      key47: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value17
          key36: value40
          key7: value19
      podSelector:
        matchLabels:
          key37: value46
          key33: value44
